--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ maintainers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-    "nltk>=3.4.5",
+    "nltk>=3.9.1",
     "hypothesis>=5.16.0",
 ]
 classifiers = [
@@ -34,7 +34,7 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/rpigu-i/patalib"
 "Repository" = "https://github.com/rpigu-i/patalib"
-"Documentation" = "https://lespatamechanix.github.io/patalib/"
+"Documentation" = "https://rpigu-i.github.io/patalib/"
 "Bug Tracker" = "https://github.com/rpigu-i/patalib/issues"
 
 [tool.poetry]
